; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/heimdal/kdc/extr_windc.c__kdc_check_access.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/heimdal/kdc/extr_windc.c__kdc_check_access.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 (i32, i32, i32*, i32*, i8*, i32*, i8*, %struct.TYPE_5__*, i32*)* }
%struct.TYPE_5__ = type { i64 }

@windcft = common dso_local global %struct.TYPE_6__* null, align 8
@krb_as_req = common dso_local global i64 0, align 8
@windcctx = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_kdc_check_access(i32 %0, i32* %1, i32* %2, i8* %3, i32* %4, i8* %5, %struct.TYPE_5__* %6, i32* %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i8*, align 8
  %16 = alloca %struct.TYPE_5__*, align 8
  %17 = alloca i32*, align 8
  store i32 %0, i32* %10, align 4
  store i32* %1, i32** %11, align 8
  store i32* %2, i32** %12, align 8
  store i8* %3, i8** %13, align 8
  store i32* %4, i32** %14, align 8
  store i8* %5, i8** %15, align 8
  store %struct.TYPE_5__* %6, %struct.TYPE_5__** %16, align 8
  store i32* %7, i32** %17, align 8
  %18 = load %struct.TYPE_6__*, %struct.TYPE_6__** @windcft, align 8
  %19 = icmp eq %struct.TYPE_6__* %18, null
  br i1 %19, label %20, label %34

20:                                               ; preds = %8
  %21 = load i32, i32* %10, align 4
  %22 = load i32*, i32** %11, align 8
  %23 = load i32*, i32** %12, align 8
  %24 = load i8*, i8** %13, align 8
  %25 = load i32*, i32** %14, align 8
  %26 = load i8*, i8** %15, align 8
  %27 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %28 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = load i64, i64* @krb_as_req, align 8
  %31 = icmp eq i64 %29, %30
  %32 = zext i1 %31 to i32
  %33 = call i32 @kdc_check_flags(i32 %21, i32* %22, i32* %23, i8* %24, i32* %25, i8* %26, i32 %32)
  store i32 %33, i32* %9, align 4
  br label %48

34:                                               ; preds = %8
  %35 = load %struct.TYPE_6__*, %struct.TYPE_6__** @windcft, align 8
  %36 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %35, i32 0, i32 0
  %37 = load i32 (i32, i32, i32*, i32*, i8*, i32*, i8*, %struct.TYPE_5__*, i32*)*, i32 (i32, i32, i32*, i32*, i8*, i32*, i8*, %struct.TYPE_5__*, i32*)** %36, align 8
  %38 = load i32, i32* @windcctx, align 4
  %39 = load i32, i32* %10, align 4
  %40 = load i32*, i32** %11, align 8
  %41 = load i32*, i32** %12, align 8
  %42 = load i8*, i8** %13, align 8
  %43 = load i32*, i32** %14, align 8
  %44 = load i8*, i8** %15, align 8
  %45 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %46 = load i32*, i32** %17, align 8
  %47 = call i32 %37(i32 %38, i32 %39, i32* %40, i32* %41, i8* %42, i32* %43, i8* %44, %struct.TYPE_5__* %45, i32* %46)
  store i32 %47, i32* %9, align 4
  br label %48

48:                                               ; preds = %34, %20
  %49 = load i32, i32* %9, align 4
  ret i32 %49
}

declare dso_local i32 @kdc_check_flags(i32, i32*, i32*, i8*, i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
